# taibai

./: .env.example  .gitignore  README.md  agent.md
.claude/: project-context.md
.codex/prompts/: agent-constraints.md
_bmad-output/planning-artifacts/: ADR-001-extensible-agent-adapter-architecture.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: cursor.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/bmm/agents/: pm.md
_bmad/core/: config.yaml
adapters/: taibai-adapter
adapters/claude_code_cli/: README.md  __init__.py  adapter.py  config.yaml.example
adapters/claude_code_cli/tests/: test_adapter.py
docs/: Claude-Code-CLI对接说明.md  P1-协议与文档对齐.md  adapter-development-guide.md  协议与SDK说明.md  接入验证指南.md
examples/verification_agent/: .env.example  README.md  main.py  requirements.txt
sdk/go/: client.go  client_test.go  config.go  go.mod  handler.go  message.go  message_test.go  room.go  room_test.go  user.go  websocket.go
sdk/python/: pyproject.toml
sdk/python/ziwei_taibai/: __init__.py  agent.py  config.py  http_client.py  manager.py  message.py  protocol.py  room.py  ws_client.py
sdk/python/ziwei_taibai/adapters/: __init__.py  base.py  cli_base.py  plugin_base.py  registry.py  sdk_base.py
