[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ziwei-taibai"
version = "0.1.0"
description = "太白 Python SDK：紫微智能体接入（协议与天枢/谛听 HTTP 调用）"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["ziwei_taibai*"]
